--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "shortid": "^2.2.15",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
